test/good/TypeAnnotation.hs
module TypeAnnotation where

type Annotated :: *
data Annotated

ignore :: Annotated -> ()
ignore _ = ()
